styles/index.css
#background {
  position:fixed;
  right: 0;
  bottom: 0;
  min-width:100%;
  min-height:100%;
}

#box{
  width:fit-content;
  height:fit-content;
  text-align: center;
  margin: 0 auto;
  position: relative;
}

#logo{
  width: 225px;
  height: 225px;
  filter: drop-shadow(0px 0px 10px #ffffff);
}

#content{
  position: absolute;
  top:20%;
  background: rgba(0, 0, 0, 0.60);
  color: #f1f1f1;
  width: 100%;
  padding: 100px;
}

#innerBox {
  background-color: #051726;
  color: white;
  filter: drop-shadow(4px -2px 5px #000000);
}

button{
  background-color: #fafafa;
  font-family: "Gugi", sans-serif;
  color: rgb(0, 0, 0);
  filter: drop-shadow(2px 0px 5px #81FFD9);
}

#title{
    font-size: 45px;
    font-weight: bolder;
    font-family: "Gugi", sans-serif;
    color:#98A6D4;
}


#slogan{
  color: white;
  width: 100%;
  inline-size: min-content;
  font-family: "Gugi", sans-serif;
  font-size: 10px;
  overflow: hidden; /* content is hidden */
  border-right: 0.50em solid white; /* thickness of the cursor */
  white-space: nowrap; /* keeps everything in one line */
  margin: 0 auto;
  letter-spacing: .15em; 
  animation: 
    typing 3.5s steps(31,end),
    blink-caret .5s step-end infinite;
}

/* typing effect */
@keyframes typing {
  from { width: 0 }
  to { width: 100% }
}

/* curser blinking effect */
@keyframes blink-caret {
  from, to { border-color: transparent }
  50% { border-color: white; }
}

#login{
  position: absolute;
  background: rgba(0, 0, 0, 0.60);
  color: #f1f1f1;
  width: 100%;
  height: 100%;
  padding: 50px;
  background-position: center;
  background-size: cover;
}

